# akropolis-c2fc-srml

./: .gitignore  Cargo.toml  LICENSE  README.md  build.all.sh  execute.sh  implementation-overview.md  spec.json  upd.substrate-up.sh
runtime/: Cargo.toml
runtime/src/: assets.rs  c2fc.rs  lib.rs  stake.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: run.wasm.sh  spec.sh
src/: chain_spec.rs  cli.rs  consts.rs  main.rs  service.rs
