[package]
name = 'akropolis'
version = '0.8.2'
authors = ['Akropolis <admin@akropolis.io>']
build = 'build.rs'
edition = '2018'

[[bin]]
name = 'akropolis'
path = 'src/main.rs'

[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'


[dependencies]
error-chain = '0.12'
hex-literal = '0.1'

derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
parity-codec = "3.3"
trie-root = "0.12.2"


[workspace]
members = [ "runtime" ]
exclude = [ "runtime/wasm" ]


[dependencies.akropolis-runtime]
path = 'runtime'


[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.telemetry]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-telemetry'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '9687db56516ef573f650dadc030315b78d708cc4'
