[package]
name = 'akropolis-runtime'
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
version = '0.8.2'


# [dependencies]
# rustc-hex = "1.0"
# bitvec = { version = "0.8", default-features = false, features = ["alloc"] }


[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5' # 3.3
# optional = true

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

# [dependencies.serde_derive]
# optional = true
# version = '1.0'


[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.finality-tracker]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-finality-tracker'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.assets]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-assets'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '9687db56516ef573f650dadc030315b78d708cc4'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '9687db56516ef573f650dadc030315b78d708cc4'


# [dev-dependencies]
# hex-literal = "0.1.0"


[features]
default = [
    'std',
]
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'assets/std',
    'executive/std',
    'aura/std',
    "grandpa/std",
    "finality-tracker/std",
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    # 'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
]
