[package]
name = 'akropolis-runtime'
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
version = '0.8.2'

[dependencies]
hex-literal = '0.2'

[dependencies.rustc-hex]
optional = true
version = '2.0'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5' # 3.3

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'


[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.finality-tracker]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-finality-tracker'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.assets]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-assets'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.treasury]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-treasury'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

# [dependencies.democracy]
# default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-democracy'
# rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '2f1b89f4b2f969917117a6bcecb14f361bf1c776'


[features]
default = [ 'std' ]
std = [
    "rustc-hex",
    'support/std',
    'parity-codec/std',
    'primitives/std',
    'offchain-primitives/std',
    'client/std',
    'rstd/std',
   #  'democracy/std',
    'executive/std',
    'runtime-io/std',
    'system/std',
    'version/std',
    'balances/std',
    'assets/std',
    'session/std',
    'staking/std',
    'treasury/std',
    'indices/std',
    'timestamp/std',
    'sudo/std',
    # 'serde_derive',
    'serde',
    'safe-mix/std',
    'aura/std',
    'consensus-aura/std',
    # temporarily disable the grandpa (issue #2834)
    "grandpa/std",
    "finality-tracker/std",
]
