[package]
name = 'akropolis-runtime-wasm'
authors = ['Akropolis <admin@akropolis.io>']
version = '0.8.0'
edition = '2018'

[lib]
crate-type = ['cdylib']


[dependencies.akropolis-runtime]
default-features = false
path = '..'


[features]
default = []
std = [
	'akropolis-runtime/std',
]


[profile.release]
panic = 'abort'
lto = true


[workspace]
members = []
